// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Search Donors Screen Default 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

.emotion-1 {
  display: table;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.emotion-1 caption {
  font-family: Rubik;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  padding: 16px;
  color: rgba(0, 0, 0, 0.6);
  text-align: right;
  caption-side: bottom;
}

.emotion-2 {
  display: table-header-group;
}

.emotion-3 {
  color: inherit;
  display: table-row;
  vertical-align: middle;
  outline: 0;
}

.emotion-3.MuiTableRow-hover:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3.Mui-selected {
  background-color: rgba(76, 175, 81, 0.08);
}

.emotion-3.Mui-selected:hover {
  background-color: rgba(76, 175, 81, 0.12);
}

.emotion-4 {
  font-family: Rubik;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(224, 224, 224, 1);
  text-align: center;
  padding: 16px;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-9 {
  display: table-row-group;
}

.emotion-11 {
  font-family: Rubik;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(224, 224, 224, 1);
  text-align: right;
  padding: 16px;
  color: rgba(0, 0, 0, 0.87);
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          חיפוש תורמים 🛠️
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <table
        className="MuiTable-root emotion-1"
        role={null}
      >
        <thead
          className="MuiTableHead-root emotion-2"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head emotion-3"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              דוא״ל
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              סוג דם
            </th>
          </tr>
        </thead>
        <tbody
          className="MuiTableBody-root emotion-9"
          role={null}
        >
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="DOH51a9KJ2VJBpZsSaFe72dHygr2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              Cxv
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              Zcv
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0532251426"
              >
                0532251426
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              sfg@ghxf.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="exjX1IXpB5e1oBIV1Dcmgj9f2nw1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              Lebron
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              James
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0524498853"
              >
                0524498853
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              tt@test.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              לא ידוע
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="QoJEdyCYPJSDM4UyMn2W8qOw15j2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              Nir
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              8
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0544116673"
              >
                0544116673
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              nis2est22@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              B-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="C1OHjLa4h5MMImCLiMei2stQkaA3"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              aaa
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              sssd
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0543334442"
              >
                0543334442
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              aa@a.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              AB-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="XkqyI9ETwicD4TzX2qnFF9rBXHP2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              cor1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              hos1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0528444444"
              >
                0528444444
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ni2test8@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="AIKuXNaZqITgyFppQdZGCqrgW7d2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              cor_test
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              zm_test
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0542261158"
              >
                0542261158
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              cor_zm_test@a.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="yMwq3NQBtlaoy2LAerdgBESubM13"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              donor1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              hos1
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0528411999"
              >
                0528411999
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ni2st14@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="8doOcKEAvsbNV5RMnzU0Tew9ETo2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              qwer
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ty
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:053113432"
              >
                053113432
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              qwer@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="2AL2kLgUSFhhydNdm0L64N9TEC12"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ra
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ka
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0501234567"
              >
                0501234567
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              miu@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="nS8qDFTA2PaIvZKdVzo51UATtt82"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              tr tester
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              333
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:21112234"
              >
                21112234
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              tr@test.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="lRRqTlFiMnfFNxlsBtNIWs1NXwO2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              shliflaf
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              kazabubu
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:052238307"
              >
                052238307
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              yerek@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="Vx24MkpiF3ZU4um93rbx2KLHTJr2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              טל
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ו
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0540000000"
              >
                0540000000
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              wags@dmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              לא ידוע
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="hWmpOj8ob6NY2Ju3e8nQr7NrrIw2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              מואב
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              קדימה
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0522222932"
              >
                0522222932
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              dimonder@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              AB+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="QVjvYphIB9Qnigg9crjvuwY7GJ43"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              יגל
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              מתלונן
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0522222222"
              >
                0522222222
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              y@aaa.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="8qhLCRwD7neqYUG7lHjysUM2D9f1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              יעלוז
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              קובל
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0522215049"
              >
                0522215049
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              yarok@wazr.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="nk0F1L0N4dQQlxb3nA6mHn9FZWN2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              נוקדים
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              פרוזן
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:050222222"
              >
                050222222
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              rekjavik@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              B+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="lu4EV7gQyEe06RnmjwTZuYuugPA2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              ניר
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              aaa
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0522226654"
              >
                0522226654
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              test@fff.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A-
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="oTw5kyXpEmURXzmCA7qFADJB7v72"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              תכשיט
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              מרעום
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0525349798"
              >
                0525349798
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              norad@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="TvmKdvXDnJdHkJ0dnzuz3FaN4zX2"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              גם
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              תכשיט
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0526402232"
              >
                0526402232
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              rokko@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              O+
            </td>
          </tr>
          <tr
            className="MuiTableRow-root emotion-3"
            data-donor-id="6oY3xoCbDdT0D9en3TFYiQITszq1"
            role={null}
          >
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              עשי
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              עדי123
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              <a
                href="tel:0539222226"
              >
                0539222226
              </a>
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              a323@gmail.com
            </td>
            <td
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium emotion-11"
            >
              A+
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Storyshots Screens/Search Donors Screen Loading 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes animation-1 {
  0% {
    stroke-dasharray: 1px,200px;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -15px;
  }

  100% {
    stroke-dasharray: 100px,200px;
    stroke-dashoffset: -125px;
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  text-align: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  font-size: 1.5rem;
  padding: 8px;
  border-radius: 50%;
  overflow: visible;
  color: rgba(0, 0, 0, 0.54);
  -webkit-transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-0::-moz-focus-inner {
  border-style: none;
}

.emotion-0.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-0 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-0:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-0:hover {
    background-color: transparent;
  }
}

.emotion-0.Mui-disabled {
  background-color: transparent;
  color: #7E7E7E;
}

.emotion-1 {
  display: table;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.emotion-1 caption {
  font-family: Rubik;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  padding: 16px;
  color: rgba(0, 0, 0, 0.6);
  text-align: right;
  caption-side: bottom;
}

.emotion-2 {
  display: table-header-group;
}

.emotion-3 {
  color: inherit;
  display: table-row;
  vertical-align: middle;
  outline: 0;
}

.emotion-3.MuiTableRow-hover:hover {
  background-color: rgba(0, 0, 0, 0.04);
}

.emotion-3.Mui-selected {
  background-color: rgba(76, 175, 81, 0.08);
}

.emotion-3.Mui-selected:hover {
  background-color: rgba(76, 175, 81, 0.12);
}

.emotion-4 {
  font-family: Rubik;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(224, 224, 224, 1);
  text-align: center;
  padding: 16px;
  color: rgba(0, 0, 0, 0.87);
}

.emotion-9 {
  display: inline-block;
  color: #4caf51;
  -webkit-animation: animation-0 1.4s linear infinite;
  animation: animation-0 1.4s linear infinite;
}

.emotion-10 {
  display: block;
}

.emotion-11 {
  stroke: currentColor;
  stroke-dasharray: 80px,200px;
  stroke-dashoffset: 0;
  -webkit-animation: animation-1 1.4s ease-in-out infinite;
  animation: animation-1 1.4s ease-in-out infinite;
}

<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium rightButton emotion-0"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg>
            menu.svg
          </svg>
        </button>
        <div
          className="title infoTitle"
        >
          חיפוש תורמים 🛠️
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <table
        className="MuiTable-root emotion-1"
        role={null}
      >
        <thead
          className="MuiTableHead-root emotion-2"
          role={null}
        >
          <tr
            className="MuiTableRow-root MuiTableRow-head emotion-3"
            role={null}
          >
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              שם פרטי
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              שם משפחה
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              טלפון
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              דוא״ל
            </th>
            <th
              aria-sort={null}
              className="MuiTableCell-root MuiTableCell-head MuiTableCell-alignCenter MuiTableCell-sizeMedium emotion-4"
              scope="col"
            >
              סוג דם
            </th>
          </tr>
        </thead>
      </table>
      <div
        className="spinner"
      >
        <span
          className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-9"
          role="progressbar"
          style={
            Object {
              "height": "3rem",
              "width": "3rem",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg emotion-10"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-11"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
